fix margin on mobile screen

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+body,
+html {
+  overflow-x: hidden; /* Prevent horizontal overflow */
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  width: 100%; /* Ensure full width */
+}
+
 body {
   font-family: Arial, sans-serif;
   display: flex;
@@ -99,6 +107,8 @@ input:checked + .slider:before {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #locationInput {
@@ -175,7 +185,6 @@ button:hover {
   #weatherData,
   #forecastData {
     width: 90%;
-    margin-left: 5%;
   }
 
   .forecast-day {
